--- a/microfrontend/microfrontend-header/package.json
+++ b/microfrontend/microfrontend-header/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 5001",
+    "dev:standalone": "vite --port 5001",
     "build": "vite build",
     "preview": "vite preview --port 5001"
   },
