--- a/microfrontend/microfrontend-maincontent/package.json
+++ b/microfrontend/microfrontend-maincontent/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 5003",
+    "dev:standalone": "vite --port 5003",
     "build": "vite build",
     "preview": "vite preview --port 5003"
   },
