--- a/microfrontend/microfrontend-sidebar/package.json
+++ b/microfrontend/microfrontend-sidebar/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 5002",
+    "dev:standalone": "vite --port 5002",
     "build": "vite build",
     "preview": "vite preview --port 5002"
   },
